fixed flicker issue

--- a/global.css
+++ b/global.css
@@ -357,10 +357,10 @@ h1 {
 
 .loading {
 opacity: 0;
-transition: all 0.8s ease-in;
+transition: all 0.4s ease-in;
 }
 
 .loaded {
 opacity: 1;
-transition: all 0.8s ease-in;
+transition: all 0.4s ease-in;
 }
